src/objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>Comes from the job function of the opportunity team member on the user record</description>
        <formula>Text($User.Job_Function__c)</formula>
        <label>Job Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_s_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team Member&apos;s Manager - Will be auto populated from user object</description>
        <label>Team Member&apos;s Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Team</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>